# axum-api-server7

./: .gitignore  Cargo.toml  README.md  env.template  requests.http  slumber.yml
migrations/: 20240225145115_initial.sql
src/: ctx.rs  db.rs  error.rs  log.rs  main.rs  model.rs  rest.rs  srcfile.rs  view.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
