[package]
name = "axum-api-server7"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
axum-extra = "0.9.2"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
  "add-extension",
  "trace",
  "cors",
] }
#tower = { version = "0.4.13", features = ["util", "timeout"] }
serde = { version = "1.0.197", features = ["derive"] }

sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
#sea-orm = { version = "0.12", features = [
#  "sqlx-postgres",
#  "runtime-tokio-rustls",
#  "macros",
#] }
once_cell = "1.19.0"
dotenvy = "0.15.7"
anyhow = "1.0.80"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
ethers = { version = "2.0.11", features = ["legacy", "rustls"] }
#ethers-solc = { version = "2.0.11", features = ["full"] }
#ethers-providers = "2.0.11"
#eyre = "0.6.12"
#hex = "0.4.3"
#reqwest = { version = "0.11.24", features = ["json"] }
#serde_json = "1.0.114"
#tempfile = "3.10.0"
#error-chain = "0.12.4"
#secp256k1 = { version = "0.28.2", features = ["rand"] }
#tiny-keccak = "2.0.2"
#clap = { version = "4.5.1", features = ["derive"] }
#chrono = { version = "0.4.34", features = ["serde"] }
#validator = { version = "0.16.1", features = ["derive"] }
#serde_with = "3.6.1"
#tracing = "0.1.40"
#tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
#uuid = { version = "1.7.0", features = ["serde", "v4"] }

[dev-dependencies]
axum-test-helper = "0.3.0"
